# Leetcode-Widget

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  codepulse.spec  mkdocs.yml  pyproject.toml  version_info.txt
.github/workflows/: ci.yml
assets/themes/: cyberpunk.json  dark.json  glass.json  leetcode.json  light.json  minimal.json
codepulse/: main.py
codepulse/application/dto/: dashboard_snapshot.py  goal_progress.py
codepulse/application/services/: goal_service.py  notification_service.py  stats_service.py
codepulse/domain/: exceptions.py
codepulse/domain/interfaces/: cache_repository.py  desktop_layout_repository.py  goal_repository.py  notification_state_repository.py  notifier.py  provider.py  settings_repository.py
codepulse/domain/models/: cache_entry.py  contest.py  daily_challenge.py  goal.py  notification_state.py  preferences.py  profile.py  stats.py  streak.py  widget.py
codepulse/infrastructure/config/: settings.py
codepulse/infrastructure/logging/: logger.py
codepulse/infrastructure/notifications/: windows_notifier.py
codepulse/infrastructure/os/: windows_startup.py
codepulse/infrastructure/persistence/: database.py  json_desktop_layout_repository.py  json_goal_repository.py  json_notification_state_repository.py  json_settings_repository.py  sqlite_cache_repository.py
codepulse/infrastructure/providers/: registry.py
codepulse/presentation/: desktop_widget_manager.py
codepulse/presentation/animations/: transitions.py
codepulse/presentation/dialogs/: goals_dialog.py  settings_dialog.py  widget_picker_dialog.py
codepulse/presentation/themes/: theme.py  theme_manager.py
codepulse/presentation/widgets/: catalog.py  progress_ring.py  stat_card.py
codepulse/presentation/windows/: base_frameless_window.py  floating_widget_window.py  main_window.py
codepulse/presentation/workers/: stats_refresh_worker.py
codepulse/utils/: color.py  resource_paths.py  windows_blur.py  windows_desktop_layer.py
docs/: architecture.md  deployment.md  developer_guide.md  index.md  installation.md
docs/api/: index.md
scripts/: benchmark_startup.py  build.py  generate_icon.py  preview_picker.py  preview_ui.py
tests/: conftest.py
tests/unit/: test_main.py
tests/unit/application/: test_goal_service.py  test_notification_service.py  test_stats_service.py
tests/unit/domain/: test_goal_models.py  test_leetcode_models.py  test_notification_state.py  test_widget_models.py
tests/unit/infrastructure/: test_app_settings.py  test_database.py  test_json_desktop_layout_repository.py  test_json_goal_repository.py  test_json_notification_state_repository.py  test_json_settings_repository.py  (+5 more)
(+39 files in other folders)
