[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codepulse"
version = "0.1.0"
description = "Your coding journey, always in sight. A live-updating desktop widget for coding platform statistics."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CodePulse Contributors" }]
keywords = ["leetcode", "desktop-widget", "productivity", "pyside6", "coding-stats"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]

dependencies = [
    "PySide6>=6.7,<7.0",
    "httpx>=0.27,<1.0",
    "loguru>=0.7,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "windows-toasts>=1.1,<2.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-qt>=4.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pyinstaller>=6.8",
    "pillow>=10.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
codepulse = "codepulse.main:main"

[tool.setuptools.packages.find]
include = ["codepulse*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Qt event handler overrides (paintEvent, mousePressEvent, ...) must match
# Qt's camelCase names exactly to be recognized -- not a naming violation.
"codepulse/presentation/**" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["codepulse"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests/", "build/", "dist/", "scripts/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=codepulse --cov-report=term-missing"
testpaths = ["tests"]
qt_api = "pyside6"
asyncio_mode = "auto"

[tool.coverage.report]
# QThread.run() bodies execute on a real OS thread that coverage.py's tracer
# never attaches to (it isn't a threading.Thread) -- see
# stats_refresh_worker.py's pragma for the specific case this covers.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
fail_under = 90
